# ChangeLog for dev-python/formencode
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/formencode/ChangeLog,v 1.16 2008/04/22 13:44:38 chtekk Exp $

  22 Apr 2008; Luca Longinotti <chtekk@gentoo.org> formencode-1.0.1.ebuild:
  Empty RDEPEND.

*formencode-1.0.1 (22 Apr 2008)

  22 Apr 2008; Luca Longinotti <chtekk@gentoo.org> -formencode-1.0.ebuild,
  +formencode-1.0.1.ebuild:
  Version bump.

*formencode-1.0 (23 Mar 2008)

  23 Mar 2008; Luca Longinotti <chtekk@gentoo.org>
  -files/formencode-0.7.1-verify_domain.patch, -formencode-0.7-r1.ebuild,
  -formencode-0.7.1-r1.ebuild, -formencode-0.7.1-r2.ebuild,
  +formencode-1.0.ebuild:
  Version bump to 1.0. Add doc USE flag to control installation of
  additional docs.

*formencode-0.7.1-r2 (01 Oct 2007)

  01 Oct 2007; Ali Polatel <hawking@gentoo.org>
  +files/formencode-0.7.1-verify_domain.patch, +formencode-0.7.1-r2.ebuild:
  revbump. fixed domain verification, bug 194093 thanks to Jacob Smullyan

*formencode-0.7.1-r1 (04 Jul 2007)
*formencode-0.7-r1 (04 Jul 2007)

  04 Jul 2007; Rob Cakebread <pythonhead@gentoo.org> -formencode-0.7.ebuild,
  +formencode-0.7-r1.ebuild, -formencode-0.7.1.ebuild,
  +formencode-0.7.1-r1.ebuild:
  Removed setuptools sed. bug# 184039

*formencode-0.7.1 (13 Apr 2007)

  13 Apr 2007; Rob Cakebread <pythonhead@gentoo.org>
  +formencode-0.7.1.ebuild:
  Version bump.

  19 Mar 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -files/formencode-0.2.2-setup-gentoo.patch,
  -files/formencode-0.3-setup-gentoo.patch,
  -files/formencode-0.4-setup-gentoo.patch,
  -files/formencode-0.6-setup-gentoo.patch, -formencode-0.2.2.ebuild,
  -formencode-0.3.ebuild, -formencode-0.4.ebuild, -formencode-0.6.ebuild,
  formencode-0.7.ebuild:
  Added NEED_PYTHON. Added missing rdep on setuptools. Fixed setup.py to skip
  use_setuptools and extras_require. Fixed to install docs/*.txt. Dropped old
  versions.

*formencode-0.7 (19 Mar 2007)
