@@ -1,4 +1,6 @@
 DIST FormEncode-1.0.1.tar.gz 172773 RMD160 d03124f9aa9134807a9cac3677166228dc40af6e SHA1 1654c8e0015b31b820d127806a60d57c7e4f0801 SHA256 aa04baac2d1ca92a3e6edb7b9332ef8397ec4ee0741e38d281119c03d4b44729
+DIST FormEncode-1.2.1.tar.gz 191426 RMD160 32c38885f9bd60ad795f05fc1ca574760fee216c SHA1 9bda57c6aebbfc29446cc25363a2968fe6eea748 SHA256 be21e3d5fa2edd1f5ff5952f67e6574dae15a027b26415910dfe813902fd5985
 EBUILD formencode-1.0.1.ebuild 802 RMD160 6927851ea7ecd631a23a1e15242342488670cdbd SHA1 35e722c0557d4f0cbe38183244c16913e756ebfd SHA256 4b6fab329a719cf526330e0ed010a18b295dbc658084cb2a806924053cc2e6ef
-MISC ChangeLog 3199 RMD160 59e91b95c8c98cbb612da871b829c45b20a5828b SHA1 b1c1145fba3daefec57bb32f0261bdf0cc0ede83 SHA256 4fd7c3598473c3034ffe60c3b143c7d83dea61f0cb8a558e915b6a71c8921370
+EBUILD formencode-1.2.1.ebuild 803 RMD160 64270c75e91fd25b4e2a5279ec76c7c92c56b905 SHA1 8e4d1ee26283b3474d6fd51e2633830096fb8f8a SHA256 4537cba42e9d83a3cd448ae98099ff2b61dd83df3ac6204f774dd22f806de658
+MISC ChangeLog 3347 RMD160 9cf1c805d4ad959ac526512a6a518ff436831c03 SHA1 29331f5a4e7370235f67febb10cb852c65d6a40f SHA256 7c0006a695c526fdaddc8d968892eafbec9b2c3c85568d0f8a2364cb4f980fb5
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
